# gRank

./: .gitignore  .prettierignore  CONTEXT.md  LICENSE  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  svelte.config.js  vercel.json  vite.config.ts
.github/workflows/: ci.yml
data/: catalog.json  grank.json  youtube-matches.json
data/review/: 07bbf672-42fd-429b-bb96-33d91fb0fbd8.json  0be8855f-b282-4c13-8383-be39bf9d05bc.json  104b021c-7e69-4154-8257-211538936de1.json  3f5bafd8-edd9-439c-99b1-6a6acb7b3ee4.json  6bdfb818-950f-4d5e-90c5-bd2d02f144e1.json  83b457d5-4984-4edd-a506-1742e123b04b.json  86f2bf9f-6620-4a29-87fd-20b8517e3769.json  9622fbee-4e5a-4bed-b2b1-efd7c9c68a9f.json  97e35783-7dca-43b1-a73f-ceafc4e228e0.json  a49e7aa0-6676-451b-8d2e-02d4e702c098.json  ac4018bf-a74f-4c8d-9f3f-c650e3915219.json  bc26c654-caf2-4571-b69b-449da9046d06.json  c124ee24-a9fa-4bbd-a8f1-df3b03c447b3.json  c3c0ce4f-9e9e-4217-917e-615cf020ca59.json  e550ed18-cfb5-4eab-9e9b-d177bd97e9ed.json  f30043f1-367d-4ef6-a474-4cb886b716fc.json
pipeline/grank_pipeline/: __init__.py  audio.py  auto_review.py  cli.py  detect.py  feed.py  models.py  publish.py  review.py  transcribe.py  verify.py  youtube.py
schema/: grank.schema.json
src/: app.css  app.html
src/lib/: data.ts  format.test.ts  format.ts  ranking.test.ts  ranking.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
static/images/: grank-signal-hero.avif
tests/e2e/: site.spec.ts
tests/pipeline/: test_auto_review.py  test_detect.py  test_feed.py  test_publish.py  test_youtube.py
(+9 files in other folders)
