[project]
name = "grank-pipeline"
version = "0.1.0"
description = "Reproducible Nerd Snipe episode analysis for gRank"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "jsonschema[format]>=4.25.1",
  "rapidfuzz>=3.14.1",
  "rich>=14.2.0",
  "typer>=0.20.0"
]

[project.optional-dependencies]
analysis = [
  "mlx-whisper>=0.4.3; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "yt-dlp>=2026.1.1"
]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.6"
]

[project.scripts]
grank = "grank_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline/grank_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["pipeline"]
testpaths = ["tests/pipeline"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
